--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/styles.css " />
   </head>
   <body>
-    <header class="header">
+    <header class="page-header">
       <div class="container nav-contact">
       <nav class="nav-contact">
         <a lang="en" href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
@@ -36,8 +36,15 @@
       <section class="hero">
         <div class="container">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
-      </div>
+        <button type="button" class="button" data-modal-open>Замовити послугу</button>
+        </div>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button type="button" class="button-close" data-modal-close>
+              <svg class="logo-close" width="18" height="18"><path d="M15 4.108 13.892 3 9.5 7.392 5.108 3 4 4.108 8.392 8.5 4 12.892 5.108 14 9.5 9.608 13.892 14 15 12.892 10.608 8.5 15 4.108Z" fill="#000" /></svg>
+            </button>
+          </div>
+        </div>
       </section>
       <!--особливості-->
       <section class="section">
@@ -88,9 +95,17 @@
         <div class="container">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work-list">
-          <li class="pic"><img src="./images/img1.jpg" alt="Десктопні додатки" width="370" height="294" /></li>
-          <li class="pic"><img src="./images/img2.jpg" alt="Мобільні додатки" width="370" height="294" /></li>
-          <li class="pic"><img src="./images/img3.jpg" alt="Дизайнерські рішення" width="370" height="294" />
+          <li class="pic">
+            <img src="./images/img1.jpg" alt="Десктопні додатки" width="370" height="294" />
+            <p class="superimposed-text">десктопні додатки</p>
+          </li>
+          <li class="pic">
+            <img src="./images/img2.jpg" alt="Мобільні додатки" width="370" height="294" />
+            <p class="superimposed-text">мобільні додатки</p>
+          </li>
+          <li class="pic">
+            <img src="./images/img3.jpg" alt="Дизайнерські рішення" width="370" height="294" />
+            <p class="superimposed-text">дизайнерські рішення</p>
           </li>
         </ul>
       </div>
@@ -235,6 +250,7 @@
         </ul>
       </div>
       </section>
+      <!-- Постійні клієнти -->
       <section class="section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
@@ -324,5 +340,6 @@
       </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
