--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="page-header">
       <div class="container nav-contact">
         <nav class="nav-contact">
           <a lang="en" href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
@@ -49,7 +49,8 @@
         </ul>
         <ul class="list-portfolio">
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img1.jpg" alt="ноутбук з фото команди" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img1.jpg" alt="ноутбук з фото команди" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-text">Веб-сайт</p>
@@ -57,7 +58,8 @@
             </a>
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img2.jpg" alt="постер гра в баскетбол" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img2.jpg" alt="постер гра в баскетбол" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
               <p class="portfolio-text">Дизайн</p>
@@ -65,7 +67,8 @@
             </a>
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img3.jpg" alt="назва ресторану на фоні риби" width="370"/>
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img3.jpg" alt="назва ресторану на фоні риби" width="370"/>
               <div class="name">
               <h2 class="portfolio-title">Ресторан Seafood</h2>
               <p class="portfolio-text">Додаток</p>
@@ -73,7 +76,8 @@
             </a>
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img4.jpg" alt="навушники" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img4.jpg" alt="навушники" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Проєкт Prime</h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -81,7 +85,8 @@
             </a>
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img5.jpg" alt="коричневий та білий бокси" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img5.jpg" alt="коричневий та білий бокси" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Проєкт Boxes</h2>
               <p class="portfolio-text">Додаток</p>
@@ -89,7 +94,8 @@
             </a>
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img6.jpg" alt="монітор" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img6.jpg" alt="монітор" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-text">Веб-сайт</p>
@@ -97,7 +103,8 @@
             </a>
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img7.jpg" alt="книга" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img7.jpg" alt="книга" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Видання Limited Edition</h2>
               <p class="portfolio-text">Дизайн</p>
@@ -105,7 +112,8 @@
             </a>  
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img8.jpg" alt="етикетка з лейбом" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img8.jpg" alt="етикетка з лейбом" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Проєкт LAB</h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -113,7 +121,8 @@
             </a>
           </li>
           <li class="element">
-            <a href="" target="_blank" rel="noopener noreferrer" class="list-link"><img class="pic" src="./images/portfolio/img9.jpg" alt="ноутбук" width="370" />
+            <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <img class="pic" src="./images/portfolio/img9.jpg" alt="ноутбук" width="370" />
               <div class="name">
               <h2 class="portfolio-title">Growing Business</h2>
               <p class="portfolio-text">Додаток</p>
