adds a hover element to portfolio cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,10 @@
         <ul class="list-portfolio">
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img1.jpg" alt="ноутбук з фото команди" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-text">Веб-сайт</p>
@@ -59,7 +62,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img2.jpg" alt="постер гра в баскетбол" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
               <p class="portfolio-text">Дизайн</p>
@@ -68,7 +74,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img3.jpg" alt="назва ресторану на фоні риби" width="370"/>
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Ресторан Seafood</h2>
               <p class="portfolio-text">Додаток</p>
@@ -77,7 +86,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img4.jpg" alt="навушники" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Проєкт Prime</h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -86,7 +98,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img5.jpg" alt="коричневий та білий бокси" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Проєкт Boxes</h2>
               <p class="portfolio-text">Додаток</p>
@@ -95,7 +110,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img6.jpg" alt="монітор" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-text">Веб-сайт</p>
@@ -104,7 +122,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img7.jpg" alt="книга" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Видання Limited Edition</h2>
               <p class="portfolio-text">Дизайн</p>
@@ -113,7 +134,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img8.jpg" alt="етикетка з лейбом" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Проєкт LAB</h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -122,7 +146,10 @@
           </li>
           <li class="element">
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
+              <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img9.jpg" alt="ноутбук" width="370" />
+              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="name">
               <h2 class="portfolio-title">Growing Business</h2>
               <p class="portfolio-text">Додаток</p>
