--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img1.jpg" alt="ноутбук з фото команди" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Технокряк</h2>
@@ -64,7 +64,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img2.jpg" alt="постер гра в баскетбол" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -76,7 +76,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img3.jpg" alt="назва ресторану на фоні риби" width="370"/>
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -88,7 +88,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img4.jpg" alt="навушники" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Проєкт Prime</h2>
@@ -100,7 +100,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img5.jpg" alt="коричневий та білий бокси" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Проєкт Boxes</h2>
@@ -112,7 +112,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img6.jpg" alt="монітор" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -124,7 +124,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img7.jpg" alt="книга" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Видання Limited Edition</h2>
@@ -136,7 +136,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img8.jpg" alt="етикетка з лейбом" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Проєкт LAB</h2>
@@ -148,7 +148,7 @@
             <a href="" target="_blank" rel="noopener noreferrer" class="list-link">
               <div class="portfolio-thumb">
               <img class="pic" src="./images/portfolio/img9.jpg" alt="ноутбук" width="370" />
-              <p class="card-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              <p class="card-details">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="name">
               <h2 class="portfolio-title">Growing Business</h2>
